--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Crussssh</title>
+    <title>Gửi em bé Phương Thảo</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -41,15 +41,23 @@
         <header>
           <h2 id="text3">Cậu yêu tớ có phải không nào ._.</h2>
           <h4 id="text4">
-            Nếu cậu ko trả lời mà thoát ra tức là muốn làm vợ tớ rùi đó nha :v
+            Nếu cậu ko trả lời mà thoát ra tức là muốn làm vợ tớ rùi đó nha :3
           </h4>
         </header>
         <button id="yes" type="button" class="btn btn-danger btn-lg">
-          Yêu ơi là yêuuuuuu <333
+          Yêu ơi là yêuuuuuu <3
         </button>
         <button id="no" type="button" class="btn btn-info btn-lg">
-          Cậu mơ à :333
+          Cậu mơ à???
         </button>
+        <center>
+          <!-- <button id="letter" type="button" class="pink-color btn btn-info btn-lg">
+          This is letter
+          </button> -->
+          <div class="col-12 text-center tamthu" style="font-size: 18pt;">
+            <a href="index2.html" target="_blank"><i class="far fa-envelope lathu" style="font-size: 40pt; color: #ef2a4d;"></i></a>
+          </div>
+      </center>
       </div>
     </div>
     <audio src="./sound/sound.mp3" autoplay></audio>
