--- a/index.html
+++ b/index.html
@@ -51,12 +51,8 @@
           Cậu mơ à???
         </button>
         <center>
-          <!-- <button id="letter" type="button" class="pink-color btn btn-info btn-lg">
-          This is letter
-          </button> -->
-          <div class="col-12 text-center tamthu" style="font-size: 18pt;">
-            <a href="index2.html" target="_blank"><i class="far fa-envelope lathu" style="font-size: 40pt; color: #ef2a4d;"></i></a>
-          </div>
+            <button id="letter" type="button" class="pink-color btn btn-info btn-lg">
+            </button>
       </center>
       </div>
     </div>
